@@ -579,6 +579,14 @@ td.formlinks a:visited
   background-position: -30px -15px;
 }
 
+#listcontrols a.page {
+  background-position: -135px 0;
+}
+
+#listcontrols a.pagesel {
+  background-position: -135px -15px;
+}
+
 #listcontrols a.unread {
   background-position: -45px 0;
 }
